terminé el html básico de la seccion 4

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -7,3 +7,9 @@ header{
 .seccionDos{
     background-color: darkgoldenrod;
 }
+.seccionSkill{
+    background-color: gold;
+}
+.seccionPortfolio{
+    background-color:violet;
+}
