terminé el html básico del footer

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,6 +1,9 @@
 header{
     background-color: chartreuse;
 }
+footer{
+    background-color: springgreen;
+}
 .hero{
     background-color: aquamarine;
 }
