--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,3 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@1000&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Mulish', sans-serif;
+}
+/*limpiar efectos que vienen por defecto*/
+a{
+    text-decoration: none;
+    color:white
+}
+ul{
+    list-style-type: none;
+}
 header{
     background-color: chartreuse;
 }
