--- a/css/estilo.css
+++ b/css/estilo.css
@@ -14,6 +14,8 @@ ul{
 }
 header{
     background-color: chartreuse;
+    display: flex;
+    justify-content: space-evenly;
 }
 footer{
     background-color: springgreen;
