más cambios en el hero

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -101,6 +101,7 @@ footer{
 .contenedorRedesSociales{
     display: flex;
     flex-direction: column;
+    margin-top: 5rem;
     
 }
 .contenedorRedesSociales a{
@@ -120,7 +121,7 @@ footer{
     background-color:  aquamarine;
     border: aquamarine;
     margin-left: 0.4rem ;
-    margin-top: 0.3rem;
+    margin-top: 1rem;
     border-left: 3px solid rgb(80, 80, 190);
     
 }
@@ -153,9 +154,22 @@ footer{
     margin-left: 1rem;
     margin-top: -0.5rem;
     font-family: 'Mulish', sans-serif;
-    
-
 }
+.divCurriculum{
+    margin-left: 12.6rem ;
+}
+.botonCurriculum{
+    width: 6rem;
+    background-color:  aquamarine;
+    border: aquamarine;
+    margin-top: 0.3rem;
+    border-bottom: 4px solid rgb(80, 80, 190);
+}
+.profesor{
+    margin-top: 1rem;
+}
+
+
 /*estilos para etiquetas de los contenedores*/
 header p{
     font-size: 1.5rem;
@@ -205,3 +219,41 @@ header .botonContratame{
                  transform: 0.2s;
 }
 
+.divCurriculum .botonDescargarCv{
+    transform: scale(1);
+    margin-top: 1rem;
+    font-size: 0.8rem;
+    padding: 20px 20px 20px 40px;
+    background-color:rgb(80, 80, 190);
+    color: white;
+    border: rgb(80, 80, 190);
+    border-radius: 10%;
+}
+.divCurriculum .botonDescargarCv:hover{
+    transform: scale(1);
+    font-size: 0.8rem;
+    padding: 20px 20px 20px 40px;
+    background-color: white;
+    color: rgb(80, 80, 190);
+    border: 0.4vh solid rgb(80, 80, 190);
+    border-radius: 10%;
+}
+.divCurriculum .botonDescargarCv{
+    transition: background 0.3s;
+                 transform: 0.2s;
+}
+
+.divCurriculum i{
+    margin: 0;
+    position: absolute;
+    color: white;
+    color: rgb(7, 228, 236);
+    font-size: 1.2rem;
+    left: 0.8rem;
+    bottom: 1rem;
+}
+.sigueme{
+    color: white;
+    writing-mode: vertical-lr;
+    text-orientation: mixed;
+ }
