--- a/css/estilo.css
+++ b/css/estilo.css
@@ -49,19 +49,24 @@ footer{
  
 .seccionDos{
     padding: 4.5rem 0;
-    background-color: darkgoldenrod;
+    background-color: rgb(9, 10, 26);
     display: flex;
     
    
 }
 .imgPaginaDos{
-    width: 30rem;
-    height: 30rem;
+    position: relative;
+    left: 14rem;
+    bottom: -1.5rem;
+    width: 22rem;
+    height: 26rem;
+    border-radius: 10% ;
 }
 
 
 .divBotonesPagDos{
     display: flex;
+    margin-left: 7rem;
 }
 .seccionSkill{
     padding: 4.5rem 0;
@@ -84,6 +89,7 @@ footer{
 .seccionDos .divContenedor{
     display: flex;
     flex-direction: column;
+    margin-left: -10rem;
 }
 .seccionDos .divDatosdeContacto{
     display: flex;
@@ -94,6 +100,7 @@ footer{
 }
 .seccionDos .divContenedorBio{
     display: flex;
+    margin-top: 8rem;
 }
 .seccionContacto .divInput{
     display: flex;
@@ -174,10 +181,10 @@ footer{
 }
 .botonCurriculum{
     width: 6rem;
-    background-color:  aquamarine;
+    background-color:  rgb(139, 156, 244);
     border: aquamarine;
     margin-top: 0.3rem;
-    border-bottom: 4px solid rgb(80, 80, 190);
+    border-bottom: 4px solid rgb(139, 156, 244);
 }
 .profesor{
     margin-top: 1rem;
@@ -204,8 +211,8 @@ header a:hover{
     transform: scale(1);
     margin-left: 2rem;
     padding: 5px 10px 5px 10px;
-    background-color: blue;
-    color: aqua;
+    background-color: rgb(23, 27, 60);
+    color: rgb(96, 118, 248);
     border-radius: 10% ;
 }
 header a{
@@ -217,19 +224,22 @@ header .botonContratame{
     transform: scale(1);
     font-size: 0.8rem;
     padding: 20px 20px 20px 20px;
-    background-color:rgb(80, 80, 190);
+    background-color:rgb(100, 123, 225);
     color: white;
-    border: rgb(80, 80, 190);
+    border: rgb(100, 123, 225);
     border-radius: 10%;
 }
 header .botonContratame:hover{
     transform: scale(1);
     font-size: 0.8rem;
     padding: 20px 20px 20px 20px;
-    background-color: white;
-    color: rgb(80, 80, 190);
-    border: 0.4vh solid rgb(80, 80, 190);
+    background-color: rgb(23, 27, 60);
+    color: white;
+    border: 0.4vh solid rgb(96, 118, 248);
     border-radius: 10%;
+    
+    
+    
 
 }
 header .botonContratame{
@@ -242,19 +252,22 @@ header .botonContratame{
     margin-top: 1rem;
     font-size: 0.8rem;
     padding: 20px 20px 20px 40px;
-    background-color:rgb(80, 80, 190);
+    background-color:rgb(100, 123, 225);
     color: white;
-    border: rgb(80, 80, 190);
+    border: rgb(100, 123, 225);
     border-radius: 10%;
 }
 .divCurriculum .botonDescargarCv:hover{
     transform: scale(1);
     font-size: 0.8rem;
     padding: 20px 20px 20px 40px;
-    background-color: white;
-    color: rgb(80, 80, 190);
-    border: 0.4vh solid rgb(80, 80, 190);
+    background-color: rgb(23, 27, 60);
+    color: white;
+    border: 0.4vh solid rgb(96, 118, 248);
     border-radius: 10%;
+    
+    
+    
 }
 .divCurriculum .botonDescargarCv{
     transition: background 0.3s;
@@ -265,7 +278,7 @@ header .botonContratame{
     margin: 0;
     position: absolute;
     color: white;
-    color: rgb(7, 228, 236);
+    
     font-size: 1.2rem;
     left: 0.8rem;
     bottom: 1rem;
@@ -276,5 +289,129 @@ header .botonContratame{
     text-orientation: mixed;
  }
 
+.divSobreMi{
+    display: flex;
+}
+.sobreMi{
+        justify-content: center;
+        display: flex;
+        
+        margin-left: 26rem;
+        font-size: 4rem;
+        font-weight: 900;
+        color: rgb(34, 34, 49);
+}
+.mi{
+   
+    margin-left: 2rem;
+    font-size: 4rem;
+    font-weight: 900;
+    color: rgb(34, 34, 49);
+}
+.pEducacion{
+    display: none;
+}
+.pExperiencia{
+    display: none;
+}
+.DivBotonesbio{
+    display: flex;
+    
+}
 
- 
+.DivBotonesbio a{
+    transform: scale(1);
+    margin-left: 2rem;
+    font-size: 0.8rem;
+}
+.DivBotonesbio a:hover{
+    transform: scale(1);
+    margin-left: 2rem;
+    padding: 5px 10px 5px 10px;
+    background-color: rgb(23, 27, 60);
+    color: rgb(96, 118, 248);
+    border-radius: 10% ;
+}
+.DivBotonesBio a{
+    transition: background 0.3s;
+                 transform: 0.2s;
+}
+.pBio{
+    position: relative;
+    color: white;
+    width: 400px;
+    bottom: -2rem;
+    left: 2rem;
+}
+.divDatosdeContacto{
+    position: relative;
+    color: rgb(77, 91, 203);
+    width: 600px;
+    bottom: -3rem;
+    left: 2rem;
+    letter-spacing: 0.1rem;
+    font-size: 0.8rem;
+}
+
+.divDatosdeContacto .divNacionalidad{
+    position: relative;
+    left: 2rem;
+    letter-spacing: 0.1rem;
+
+} 
+
+.divBotonesPagDos{
+    position: relative;
+    left: -5rem;
+    bottom: -6rem;
+   
+}
+
+.divBotonesPagDos .BotonDosBotones {
+    position: relative;
+    left: 2rem;
+    transform: scale(1);
+    font-size: 0.8rem;
+    padding: 20px 20px 20px 20px;
+    background-color:rgb(100, 123, 225);
+    color: white;
+    border: rgb(100, 123, 225);
+    border-radius: 10%;
+
+}
+.BotonBotones{
+    transform: scale(1);
+    font-size: 0.8rem;
+    padding: 20px 20px 20px 20px;
+    background-color:rgb(100, 123, 225);
+    color: white;
+    border: rgb(100, 123, 225);
+    border-radius: 10%;
+}
+
+.BotonDosBotones:hover{
+    transform: scale(1);
+    font-size: 0.8rem;
+    padding: 20px 20px 20px 20px;
+    background-color: rgb(23, 27, 60);
+    color: white;
+    border: 0.4vh solid rgb(96, 118, 248);
+    border-radius: 10%;
+}
+.BotonDosBotones{
+    transition: background 0.3s;
+                 transform: 0.2s;
+}
+.BotonBotones:hover{
+    transform: scale(1);
+    font-size: 0.8rem;
+    padding: 20px 20px 20px 20px;
+    background-color: rgb(23, 27, 60);
+    color: white;
+    border: 0.4vh solid rgb(96, 118, 248);
+    border-radius: 10%;
+}
+.BotonBotones{
+    transition: background 0.3s;
+                 transform: 0.2s;
+}
