--- a/css/estilo.css
+++ b/css/estilo.css
@@ -70,7 +70,7 @@ footer{
 }
 .seccionSkill{
     padding: 4.5rem 0;
-    background-color: gold;
+    background-color: rgb(9, 10, 26);
 }
 .seccionPortfolio{
     padding: 4.5rem 0;
@@ -414,4 +414,148 @@ header .botonContratame{
 .BotonBotones{
     transition: background 0.3s;
                  transform: 0.2s;
+}
+
+/*SECCION 3*/
+
+.tituloSeccionSkill{
+    justify-content: center;
+    margin-left: 28rem;
+    font-size: 4rem;
+    font-weight: 900;
+    color: rgb(34, 34, 49);
+}
+
+.divaSeccionSkill a{
+    position: relative;
+    left: 24.5rem;
+    bottom: -2rem;
+    justify-content: center;
+    margin-left: 3.5rem;
+    transform: scale(1);
+    
+    font-size: 1.7rem;
+}
+.divaSeccionSkill a:hover{
+    transform: scale(1);
+    margin-left: 2rem;
+    padding: 5px 10px 5px 10px;
+    background-color: rgb(23, 27, 60);
+    color: rgb(96, 118, 248);
+    border-radius: 10% ;
+}
+.divaSeccionSkill a{
+    transition: background 0.3s;
+                 transform: 0.2s;
+}
+
+.divAdobes{
+    font-size: 1.5rem;
+}
+
+
+.divAdobePhoto{
+    display: flex;
+    color: white;
+    font-size: 1.5rem;
+
+}
+.pAdobePhoto {
+    position: relative;
+    left: 10rem;
+    bottom: -4.8rem;
+}
+
+.circulosAdobe{
+    position: relative;
+    left: 15.5rem;
+    bottom: -4.5rem;
+    color: rgb(100, 123, 255);
+    letter-spacing: 0.8rem;
+    font-size: 2rem;
+
+}
+
+.pDivAdobe{
+    position: relative;
+    bottom: -5.3rem;
+    left: 8.9rem;
+    font-size: 0.7rem;
+}
+
+.divContenedorAdobeXd{
+    color: white;
+    font-size: 1.5rem;
+}
+
+.pAdobeXD{
+    position: relative;
+    margin-left: 10rem;
+    bottom: -6.8rem;
+}
+.circulosAdobeXd{
+    position: relative;
+    margin-left: 28rem;
+    bottom: -4.5rem;
+    color: rgb(100, 123, 255);
+    letter-spacing: 0.8rem;
+    font-size: 2rem;
+}
+
+.pDivAdobeXd{
+    position: relative;
+    bottom: -2.8rem;
+    margin-left: 53rem;
+    font-size: 0.7rem;
+}
+
+.divContenedorProto{
+    color: white;
+    font-size: 1.5rem;
+}
+.pproto{
+    position: relative;
+    margin-left: 10rem;
+    bottom: -6.8rem;
+}
+.CirculosProto{
+    position: relative;
+    margin-left: 28rem;
+    bottom: -4.5rem;
+    color: rgb(100, 123, 255);
+    letter-spacing: 0.8rem;
+    font-size: 2rem;
+}
+
+.pDivProto{
+    position: relative;
+    bottom: -2.8rem;
+    margin-left: 40.7rem;
+    font-size: 0.7rem;
+}
+
+.divContenedorPlaning{
+    color: white;
+    font-size: 1.5rem;
+}
+
+.pplaning{
+    position: relative;
+    margin-left: 10rem;
+    bottom: -6.8rem;
+}
+
+.CirculosPlaning{
+    position: relative;
+    margin-left: 28rem;
+    bottom: -4.5rem;
+    color: rgb(100, 123, 255);
+    letter-spacing: 0.8rem;
+    font-size: 2rem;
+}
+.pDivPlaning{
+    position: relative;
+    bottom: -2.8rem;
+    margin-left: 57.2rem;
+    font-size: 0.7rem;
 }
