cambios en el header y el hero

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -5,46 +5,100 @@
     font-family: 'Mulish', sans-serif;
 }
 /*limpiar efectos que vienen por defecto*/
+
 a{
     text-decoration: none;
     color:white;
     font-family: 'Mulish', sans-serif;
 }
+
 ul{
     list-style-type: none;
 }
 header{
+    position: fixed;
     background-color: rgb(9, 10, 26);
     display: flex;
     justify-content: space-evenly;
     height: 5rem;
     align-items: center;
+    width: 100%;
+    z-index: 1;
 }
+
 header h2{
     color: rgb(101, 124, 255);
 }
 footer{
     padding: 3.5rem 0;
-   
     background-color: rgb(9, 10, 26);
 }
 
 .hero{
-    
-    background-color: rgb(9, 10, 26);
+    background-color:rgb(9, 10, 26);
     display: flex;
     height: 140vh;
+   
     
 }
+
+
+
+.figuras .lineaondulada{
+    width: initial;
+    opacity: 0.33;
+    position: absolute;
+}
+.figuras .lineaondulada{
+    height: 1rem;
+    left: 30rem;
+    bottom: 18rem;
+    -webkit-transform: rotate(130deg);
+}
+    
+    
+.figuras .cuadradouno{
+    width: initial;
+    position: absolute;
+}
+.figuras .cuadradouno{
+    height: 1.5rem;
+    left: 23rem;
+    bottom: 20rem;
+}
+
+.figuras .cuadradodos{
+    width: initial;
+    position: absolute;
+}
+.figuras .cuadradodos{
+    height: 2rem;
+    left: 63rem;
+    top: 14rem;
+}
+.figuras .cuadradotres{
+    width: initial;
+    position: absolute;
+}
+.figuras .cuadradotres{
+    height: 1rem;
+    left: 27rem;
+    top: 35rem;
+}
+
 .imgHero{
     position: relative;
-    width: 40rem;
-    background: transparent;
+    left: 6rem;
+    margin-top: 7rem;
+    width: 35rem;
     transition: 3s;
+
+   
+    
 }
 .imgHero:hover{
     background: var(--bg--color);
-    opacity: .10;
+    opacity: 0.10;
 }
 
  
@@ -61,7 +115,7 @@ footer{
     bottom: -1.5rem;
     width: 22rem;
     height: 26rem;
-    border-radius: 10% ;
+    border-radius: 1vh ;
 }
 
 
@@ -121,7 +175,7 @@ footer{
 .contenedorRedesSociales{
     display: flex;
     flex-direction: column;
-    margin-top: 5rem;
+    margin-top: 4rem;
     
 }
 .contenedorRedesSociales a{
@@ -141,42 +195,54 @@ footer{
     background-color: rgb(9, 10, 26);
     border: rgb(9, 10, 26);
     margin-left: 0.4rem ;
-    margin-top: 1rem;
+    margin-top: 1.7rem;
     border-left: 3px solid rgb(139, 156, 244);
     
 }
 .hola{
+    position: relative;
     justify-content: center;
     display: block;
     width: 20rem;
-    margin-left: 18rem;
+    margin-left: 10rem;
+    margin-top: 5.5rem;
     font-size: 15rem;
     font-weight: 900;
     color: rgb(34, 34, 49);
+    opacity: 0.33;
+    
 }
+
 .divNombre{
     display: flex;
     justify-content: center;
     text-align: center;
 }
 .soy{
-    margin-right: 11rem;
+    margin-right: 10rem;
+    margin-top: -3rem;
     justify-content: center;
     text-align: center;
     font-family: 'Mulish', sans-serif;
     color: white;
+    font-size: 4rem;
 }
 
 .montenegro{
+    position: relative;
+    
+    right: -11rem;
     font-family: 'Mulish', sans-serif;
     color: white;
+    font-size: 4rem;
 }
 
 .rodrigo{
-    margin-left: 1rem;
-    margin-top: -0.5rem;
+    position: relative;
+    right: -12rem;
     font-family: 'Mulish', sans-serif;
     color: white;
+    font-size: 4rem;
 }
 .divCurriculum{
     margin-left: 12.6rem ;
@@ -186,14 +252,19 @@ footer{
     background-color:  rgb(139, 156, 244);
     border: aquamarine;
     margin-top: 0.3rem;
+    margin-left: -1.4rem;
     border-bottom: 4px solid rgb(139, 156, 244);
 }
 .profesor{
     margin-top: 1rem;
     color: white;
+    font-size: 0.8rem;
+    margin-left: -1.4rem;
 }
 .diseñadorWeb{
     color: white;
+    font-size: 0.8rem;
+    margin-left: -1.4rem;
 }
 
 
@@ -215,7 +286,7 @@ header a:hover{
     padding: 5px 10px 5px 10px;
     background-color: rgb(23, 27, 60);
     color: rgb(96, 118, 248);
-    border-radius: 10% ;
+    border-radius: 1vh ;
 }
 header a{
     transition: background 0.3s;
@@ -229,7 +300,7 @@ header .botonContratame{
     background-color:rgb(100, 123, 225);
     color: white;
     border: rgb(100, 123, 225);
-    border-radius: 10%;
+    border-radius: 1vh;
 }
 header .botonContratame:hover{
     transform: scale(1);
@@ -238,7 +309,7 @@ header .botonContratame:hover{
     background-color: rgb(23, 27, 60);
     color: white;
     border: 0.4vh solid rgb(96, 118, 248);
-    border-radius: 10%;
+    border-radius: 1vh;
 }
 header .botonContratame{
     transition: background 0.3s;
@@ -248,13 +319,17 @@ header .botonContratame{
 .divCurriculum .botonDescargarCv{
     transform: scale(1);
     margin-top: 1rem;
+    margin-left: -1.4rem;
     font-size: 0.8rem;
     padding: 20px 20px 20px 40px;
     background-color:rgb(100, 123, 225);
     color: white;
     border: rgb(100, 123, 225);
-    border-radius: 10%;
+    border-radius: 1vh;
+    z-index: 2;
 }
+
+
 .divCurriculum .botonDescargarCv:hover{
     transform: scale(1);
     font-size: 0.8rem;
@@ -262,10 +337,7 @@ header .botonContratame{
     background-color: rgb(23, 27, 60);
     color: white;
     border: 0.4vh solid rgb(96, 118, 248);
-    border-radius: 10%;
-    
-    
-    
+    border-radius: 1vh;
 }
 .divCurriculum .botonDescargarCv{
     transition: background 0.3s;
@@ -285,6 +357,8 @@ header .botonContratame{
     color: white;
     writing-mode: vertical-lr;
     text-orientation: mixed;
+    margin-top: 11rem;
+    font-size: 0.9rem;
  }
 
 .divSobreMi{
