--- a/css/estilo.css
+++ b/css/estilo.css
@@ -53,7 +53,7 @@ footer{
     height: 1rem;
     left: 30rem;
     bottom: 18rem;
-    -webkit-transform: rotate(130deg);
+    -webkit-transform: rotate(130deg) ;
 }
     
     
@@ -111,11 +111,21 @@ footer{
 }
 .imgPaginaDos{
     position: relative;
-    left: 14rem;
-    bottom: -1.5rem;
-    width: 22rem;
-    height: 26rem;
+    left: -3.6rem;
+    bottom: -3.5rem;
+    width: 20rem;
+    height: 26.5rem;
     border-radius: 1vh ;
+}
+.botonImgPaginaDos{
+    position: relative;
+    width: 20rem;
+    height: 26.5rem;
+    left: 14.5rem;
+    top: 5rem;
+    border: 5.9px dashed  rgb(100, 123, 253);
+    background-color: rgb(9, 10, 26);
+    border-radius: 2vh;
 }
 
 
@@ -145,7 +155,8 @@ footer{
 .seccionDos .divContenedor{
     display: flex;
     flex-direction: column;
-    margin-left: -10rem;
+    margin-left: -23.6rem;
+    margin-top: 6rem;
 }
 .seccionDos .divDatosdeContacto{
     display: flex;
@@ -296,7 +307,7 @@ header a{
 header .botonContratame{
     transform: scale(1);
     font-size: 0.8rem;
-    padding: 20px 20px 20px 20px;
+    padding: 15px 20px 15px 20px;
     background-color:rgb(100, 123, 225);
     color: white;
     border: rgb(100, 123, 225);
@@ -305,7 +316,7 @@ header .botonContratame{
 header .botonContratame:hover{
     transform: scale(1);
     font-size: 0.8rem;
-    padding: 20px 20px 20px 20px;
+    padding: 15px 20px 15px 20px;
     background-color: rgb(23, 27, 60);
     color: white;
     border: 0.4vh solid rgb(96, 118, 248);
@@ -369,14 +380,14 @@ header .botonContratame{
         display: flex;
         
         margin-left: 26rem;
-        font-size: 4rem;
+        font-size: 7rem;
         font-weight: 900;
         color: rgb(34, 34, 49);
 }
 .mi{
    
     margin-left: 2rem;
-    font-size: 4rem;
+    font-size: 7rem;
     font-weight: 900;
     color: rgb(34, 34, 49);
 }
@@ -444,31 +455,31 @@ header .botonContratame{
     left: 2rem;
     transform: scale(1);
     font-size: 0.8rem;
-    padding: 20px 20px 20px 20px;
+    padding: 15px 20px 15px 20px;
     background-color:rgb(100, 123, 225);
     color: white;
     border: rgb(100, 123, 225);
-    border-radius: 10%;
+    border-radius: 1vh;
 
 }
 .BotonBotones{
     transform: scale(1);
     font-size: 0.8rem;
-    padding: 20px 20px 20px 20px;
+    padding: 15px 20px 15px 20px;
     background-color:rgb(100, 123, 225);
     color: white;
     border: rgb(100, 123, 225);
-    border-radius: 10%;
+    border-radius: 1vh;
 }
 
 .BotonDosBotones:hover{
     transform: scale(1);
     font-size: 0.8rem;
-    padding: 20px 20px 20px 20px;
+    padding: 15px 20px 15px 20px;
     background-color: rgb(23, 27, 60);
     color: white;
     border: 0.4vh solid rgb(96, 118, 248);
-    border-radius: 10%;
+    border-radius: 1vh;
 }
 .BotonDosBotones{
     transition: background 0.3s;
@@ -477,11 +488,11 @@ header .botonContratame{
 .BotonBotones:hover{
     transform: scale(1);
     font-size: 0.8rem;
-    padding: 20px 20px 20px 20px;
+    padding: 15px 20px 15px 20px;
     background-color: rgb(23, 27, 60);
     color: white;
     border: 0.4vh solid rgb(96, 118, 248);
-    border-radius: 10%;
+    border-radius: 1vh;
 }
 .BotonBotones{
     transition: background 0.3s;
